# TrussFEM

./: ._README.md  .gitignore  README.md
Examples/Five_Bar/: ._elements.txt  Output_element_results.txt  Output_node_results.txt  bcs.txt  elements.txt  materials.txt
Examples/Four_Bar/: bcs.txt  elements.txt  nodes.txt
Examples/Three_Bar/: ._bcs.txt  ._elements.txt  ._materials.txt  ._nodes.txt  Output_element_results.txt  Output_node_results.txt  bcs.txt  elements.txt  materials.txt  nodes.txt
Examples/Warren_Truss/: bcs.txt  elements.txt  nodes.txt
Src/: CMakeLists.txt  Core.h  Main.cpp  TrussFEM.cpp  TrussFEM.h
